<resources>

    <string name="selecione_idioma">Selecione o idioma</string>

    <string name="idioma_pt">Português</string>
    <string name="idioma_en">English</string>
    <string name="idioma_es">Español</string>
    <string name="idioma_fr">Français</string>
    <string name="idioma_ht">Kreyòl Ayisyen</string>
    <string name="idioma_zh">中文 (Zhōngwén)</string>
    <string name="idioma_hi">हिन्दी (Hindi)</string>



    <string name="app_name">Immigrant Economy</string>
    <string name="desc_btn_idioma">Mudar idioma</string>
    <string name="cadastro">CADASTRO</string>
    <string name="inicio">Inicio</string>
    <string name="nome">Nome:</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="e_mail">E-mail:</string>
    <string name="informe_seu_email">Informe seu email</string>
    <string name="data_de_nascimento">Data de Nascimento:</string>
    <string name="nascimento">Nascimento</string>
    <string name="nacionalidade">Nacionalidade:</string>
    <string name="senha">Senha:</string>
    <string name="crie_uma_senha">Crie uma senha</string>
    <string name="exibir_senha">Exibir senha</string>
    <string name="confirmar_senha">Confirmar Senha:</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="exibir_senhaa">Exibir senha</string>
    <string name="g_nero">Gênero:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="prefiro_n_o_informar">Prefiro não informar</string>
    <string name="outros">Outros</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="enviar_e_mail_de_redefini_o">Enviar e-mail de redefinição</string>
    <string name="voltar_ao_login">Voltar ao Login</string>
    <string name="moeda">Moeda</string>
    <string name="digite_o_valor">Digite o valor:</string>
    <string name="converter">Converter</string>
    <string name="valor_convertido">Valor convertido</string>
    <string name="metas">Metas</string>
    <string name="chatbot">ChatBot</string>
    <string name="investimento">Investimento</string>
    <string name="gastos">Gastos</string>
    <string name="documentos">Documentos</string>
    <string name="login">LOGIN</string>
    <string name="inicioo">Inicio</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="senhaa">Senha:</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="exibir_senhaaa">Exibir senha</string>
    <string name="logar">LOGAR</string>
    <string name="n_o_tem_conta_cadastre_se">Não tem conta? Cadastre-se!</string>
    <string name="t_tulo_da_meta">Título da meta</string>
    <string name="descri_o">Descrição</string>
    <string name="valor_r">Valor (R$)</string>
    <string name="adicionar_meta">Adicionar Meta</string>
    <string name="listar_metas">Listar Metas</string>
    <string name="ndice_da_meta_para_remover">Índice da meta para remover</string>
    <string name="remover_meta">Remover Meta</string>
    <string name="voltar_para_home">Voltar para Home</string>
    <string name="loginn">Login</string>
    <string name="cadastroo">Cadastro</string>
    <string name="descri_oo">Descrição</string>
    <string name="valor">Valor</string>
    <string name="categoria">Categoria</string>
    <string name="data_dd_mm_aaaa">Data (DD/MM/AAAA)</string>
    <string name="forma_de_pagamento">Forma de Pagamento</string>
    <string name="observa_es">Observações</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar_para_homeo">Voltar para Home</string>
    <string name="voltar">Voltar</string>
    <string name="organize_seus_ndocumentos">Organize seus\ndocumentos!</string>
    <string name="pasta">Pasta</string>
    <string name="pastaa">Pasta</string>
    <string name="pastaaa">Pasta</string>
    <string name="pastaaaa">Pasta</string>


    <string name="investimentos_titulo">Investimentos: Construindo segurança financeira mesmo em um novo país</string>
    <string name="investimentos_texto">Investir é uma das formas mais eficazes de garantir segurança financeira e construir patrimônio ao longo do tempo. Para imigrantes, que muitas vezes enfrentam desafios como adaptação cultural, custos inesperados e dificuldade de acesso a informações financeiras, entender investimentos pode ser um passo essencial para alcançar estabilidade e oportunidades no país onde vivem.\n\nDiferente de simplesmente guardar dinheiro, investir significa colocar seu capital para trabalhar, de forma que ele cresça com o tempo. Isso acontece por meio de juros, valorização de ativos e rendimentos variados, que podem ajudá-lo a atingir objetivos financeiros de curto, médio e longo prazo.\n\nTipos de investimentos:\n\nRenda fixa: indicada para quem busca segurança e previsibilidade. Exemplos incluem poupança, títulos públicos e CDBs.\n\nRenda variável: investimentos cujo retorno não é garantido e pode oscilar, como ações, fundos imobiliários e ETFs.\n\nFundos de investimento: permitem que um grupo de investidores aplique dinheiro em conjunto, diversificando riscos e sendo geridos por profissionais.\n\nInvestimentos alternativos: ativos como criptomoedas, startups ou negócios próprios, que podem oferecer grandes retornos, mas exigem atenção aos riscos.\n\nPrincípios básicos para investir com segurança:\n- Eduque-se financeiramente.\n- Defina seus objetivos.\n- Planeje o horizonte de tempo.\n- Diversifique.\n- Comece com pequenas quantias.\n\nRiscos e cuidados importantes:\n- Risco de mercado: variações nos preços de ações, fundos ou imóveis podem reduzir o valor do investimento.\n- Risco de crédito: se uma instituição financeira não cumprir suas obrigações, há risco de perda.\n- Risco de liquidez: alguns investimentos não podem ser resgatados rapidamente sem perda de valor.\n\nInvestir com sucesso é uma prática contínua que exige disciplina, paciência e aprendizado constante. Mesmo em um novo país, você pode construir segurança e independência financeira, permitindo que seus recursos trabalhem para você, e não o contrário.</string>
    <string name="crie_seu_pin">Crie seu PIN</string>
    <string name="confirme_o_pin">Confirme o PIN</string>
    <string name="salvar_pin">Salvar PIN</string>
    <string name="digite_seu_pin">Digite seu PIN</string>
    <string name="entrar">Entrar</string>

    <string-array name="categorias_array">
        <item>Alimentação</item>
        <item>Transporte</item>
        <item>Lazer</item>
        <item>Educação</item>
        <item>Saúde</item>
        <item>Outros</item>
    </string-array>

    <string-array name="formas_pagamento_array">
        <item>Dinheiro</item>
        <item>Crédito</item>
        <item>Débito</item>
        <item>Pix</item>
        <item>Transferência</item>
        <item>Outros</item>
    </string-array>


    <string-array name="paises">
        <item>Venezolanos</item>      <!-- Espanhol -->
        <item>Ayisyen</item>          <!-- Crioulo Haitiano -->
        <item>Cubanos</item>          <!-- Espanhol -->
        <item>Bolivianos</item>       <!-- Espanhol -->
        <item>Argentinos</item>       <!-- Espanhol -->
        <item>中国人 (Zhōngguó rén)</item>  <!-- Chinês -->
        <item>भारतीय (Bhāratīya)</item>     <!-- Hindi -->
        <item>Angolanos</item>        <!-- Português -->
    </string-array>


    <string-array name="idiomas_array">
        <item>Português</item>
        <item>Inglês</item>
        <item>Espanhol</item>
    </string-array>

</resources>