<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoapp"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_oo"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categoria"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_dd_mm_aaaa"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtFormaPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forma_de_pagamento"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtObservacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/observa_es"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4A90E2"
        android:text="@string/adicionar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <Button
        android:id="@+id/btnIrHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4A90E2"
        android:text="@string/voltar_para_homeo"/>
</LinearLayout>
