<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoapp"
    tools:context=".view.Cadastro">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/cadastro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:textSize="20dp"
        android:backgroundTint="#CCCCCC"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/Titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textColor="#000000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/nome_campo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fundo_campo"
                android:hint="@string/informe_seu_nome"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/e_mail"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/nome_campo"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/email_campo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fundo_campo"
                android:hint="@string/informe_seu_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/nasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/data_de_nascimento"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/email_campo"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/data_nasc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fundo_campo"
                android:hint="@string/nascimento"
                android:focusable="false"
                android:inputType="none"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/nasc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/nacionalidade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nacionalidade"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/data_nasc"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/Nacionalidade"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/fundo_campo"
                app:layout_constraintTop_toBottomOf="@id/nacionalidade_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/senha_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/senha"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/Nacionalidade"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fundo_campo"
                android:hint="@string/crie_uma_senha"
                android:inputType="textPassword"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/senha_texto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/cbMostrarSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/exibir_senha"
                app:layout_constraintTop_toBottomOf="@id/senha"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/Confsenha_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirmar_senha"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/cbMostrarSenha"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/conf_senha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fundo_campo"
                android:hint="@string/confirme_sua_senha"
                android:inputType="textPassword"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/Confsenha_texto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/cbMostrarConfirmarSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/exibir_senhaa"
                app:layout_constraintTop_toBottomOf="@id/conf_senha"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/g_nero"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/cbMostrarConfirmarSenha"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioGroup
                android:id="@+id/rgGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvGenero"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/Feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feminino" />

                <RadioButton
                    android:id="@+id/Masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/NaoInformar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefiro_n_o_informar" />

                <RadioButton
                    android:id="@+id/Outros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outros" />

            </RadioGroup>

            <Button
                android:id="@+id/cadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#4A90E2"
                android:padding="15dp"
                android:text="@string/cadastrar"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/rgGenero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>