<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoapp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#4A90E2"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_btn_idioma"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/btnvoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/t_tulo_da_meta"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descri_o"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/etValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_r"
                android:inputType="numberDecimal"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/btnAdicionar"
                android:text="@string/adicionar_meta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4A90E2"/>

            <Button
                android:id="@+id/btnListar"
                android:text="@string/listar_metas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4A90E2"/>

            <EditText
                android:id="@+id/etIndiceRemover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ndice_da_meta_para_remover"
                android:inputType="number"
                android:minHeight="48dp"/>

            <Button
                android:id="@+id/btnRemover"
                android:text="@string/remover_meta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4A90E2"/>

            <TextView
                android:id="@+id/tvMetas"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"/>

            <Button
                android:id="@+id/btnVoltarHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltar_para_home"
                android:backgroundTint="#4A90E2"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
