<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtPin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crie_seu_pin"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtPin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirme_o_pin"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSalvarPin"
        android:text="@string/salvar_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
